# rtr

./: .gitignore
03-fly-over/: .gitignore  03-fly-over.cpp  CMakeLists.txt  flymover.cpp  phong.fsh  phong.vsh  skybox.fsh  skybox.sublime-workspace  terrain.fsh
Aufgabe 2/: dots.vert  toon.frag
build-moonlanding-Test_clang-Debug/: .qmake.stash  moc_appwindow.cpp  moc_imagedisplaybutton.cpp  moc_imagedisplaydialog.cpp  moc_predefs.h  moc_rtrglwidget.cpp  moc_scene.cpp  ui_appwindow.h  ui_imagedisplaybutton.h  ui_imagedisplaydialog.h
build-rtrApp-Desktop_Qt_5_8_0_clang_64bit-Release/: Makefile  moc_appwindow.cpp  moc_predefs.h  moc_rtrglwidget.cpp  moc_scene.cpp  ui_appwindow.h
moonlanding/: CMakeLists.txt  appwindow.cpp  appwindow.ui  assets.qrc  camera.h  material.cpp  material.h  nodenavigator.cpp  nodenavigator.h  scene.cpp  scene.h  shaders.qrc
moonlanding/assets/models/satelite/: DS1_tex_01.mtl  satelite.mtl
moonlanding/assets/models/spaceship/: spaceship.blend  spaceship2.mtl
moonlanding/assets/shaders/: bloom.frag  blur.frag  depth_of_field_far.frag  geo_distortion.frag  highlight.frag
moonlanding/geometries/moon/: moon.mtl
moonlanding_old/: assets.qrc  scene.cpp
rtrApp/: appwindow.cpp  appwindow.h  appwindow.ui  assets.qrc  material.cpp  material.h  rtrApp.pro  scene.cpp  scene.h  toon.frag  toon.vert
rtrApp_neu/: appwindow.cpp  appwindow.h  appwindow.ui  assets.qrc  material.cpp  material.h  node.cpp  scene.cpp  scene.h
texture_demos/: appwindow.cpp  appwindow.h  appwindow.ui  assets.qrc  camera.h  cubemap.h  material.cpp  material.h  (+3 more)
(+59 files in other folders)
